--- a/linear-regression/.vscode/settings.json
+++ b/linear-regression/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/manar/.pyenv/versions/3.9.4/bin/python"
+    "python.pythonPath": "/home/manar/Asackwork/401Level/newpy/.venv/bin/python"
 }
